# dataloader

./: README.md  pyproject.toml
dataloader/: _loader.py  _validate.py  utils.py
