[tool.poetry]
name = "dataloader"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
progress = "^1.6"
click = "^8.1.7"
scikit-learn = "^1.4.1.post1"
scikit-learn-intelex = "^2024.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
